--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,11 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.4
+  package_info_plus: ^1.4.0
   provider: ^6.0.2
   shimmer: ^2.0.0
+  google_fonts: ^2.3.1
+  shared_preferences: ^2.0.13
 
 dev_dependencies:
   flutter_lints: ^1.0.0
@@ -48,6 +51,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+  - assets/logo/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
