--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,16 @@ dependencies:
   shimmer: ^2.0.0
   google_fonts: ^2.3.1
   shared_preferences: ^2.0.13
+  modal_progress_hud_nsn: ^0.1.0-nullsafety-1
+  flutter_spinkit: ^5.1.0
+  material_dialogs: ^1.1.1
+  font_awesome_flutter: ^10.1.0
+  cached_network_image: ^3.2.0
+  path_provider: ^2.0.9
+  path: ^1.8.0
+  image_picker: ^0.8.5
+  image_cropper: ^1.5.1
+  dropdown_search: ^2.0.1
 
 dev_dependencies:
   flutter_lints: ^1.0.0
