--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   image_picker: ^0.8.5
   image_cropper: ^1.5.1
   dropdown_search: ^2.0.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_lints: ^1.0.0
