--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -29,8 +29,9 @@
         <activity
              android:name="com.yalantis.ucrop.UCropActivity"
              android:screenOrientation="portrait"
-             android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+             />
         <!-- Don't delete the meta-data below.
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
             android:name="flutterEmbedding"
