--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,13 +26,20 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
+# provider: ^6.0.2
+# charts_flutter: ^0.12.0
+# path_provider: ^2.0.9
+# path: ^1.8.0
+# image_picker: ^0.8.5
+# image_cropper: ^1.5.1
+# dropdown_search: ^2.0.1
+
 dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
   http: ^0.13.4
   package_info_plus: ^1.4.0
-  provider: ^6.0.2
   shimmer: ^2.0.0
   google_fonts: ^2.3.1
   shared_preferences: ^2.0.13
@@ -41,13 +48,7 @@ dependencies:
   material_dialogs: ^1.1.1
   font_awesome_flutter: ^10.1.0
   cached_network_image: ^3.2.0
-  path_provider: ^2.0.9
-  path: ^1.8.0
-  image_picker: ^0.8.5
-  image_cropper: ^1.5.1
-  dropdown_search: ^2.0.1
   intl: ^0.17.0
-  charts_flutter: ^0.12.0
   datetime_picker_formfield: ^2.0.0
   syncfusion_flutter_charts: ^20.1.52
 
