--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   intl: ^0.17.0
   datetime_picker_formfield: ^2.0.0
   syncfusion_flutter_charts: ^20.1.52
+  photo_view: ^0.14.0
 
 dev_dependencies:
   flutter_lints: ^1.0.0
